k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ship-it
  namespace: ship-it
  labels:
    app: ship-it
spec:
  selector:
    app: ship-it
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
