k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ship-it
  namespace: ship-it
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ship-it.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ship-it
                port:
                  number: 80
